--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -1,9 +1,33 @@
-﻿<html>
-<head> <title>Cool</title></head>
+<!DOCTYPE html>
+<html>
+<title>Splitwise</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-<br><br>
-<b><h1>Hello This is MANISH first live project </h1>
 
+<!-- Navbar (sit on top) -->
+<div class="w3-top">
+  <div class="w3-bar w3-green w3-wide w3-padding w3-card">
+    <a href="index.html" class="w3-bar-item w3-button"><b></b> S P L I T W I S E </a>
+    <!-- Float links to the right. Hide them on small screens -->
+    <div class="w3-right w3-hide-small">
+      <a href="http://127.0.0.1:5000/login" class="w3-bar-item w3-button">LOGIN</a>
+      <a href="http://127.0.0.1:5000/register" class="w3-bar-item w3-button">SIGNUP</a>
+
+    </div>
+  </div>
+</div>
+
+<!-- Central part -->
+<pre>
+
+
+
+                    <img src="static/image/capture.png" width="1000" height="130" alt="no image">
+                                               <a href="static/image/1.png" target="__blank"> <img border="0" alt="W3Schools" src="static/image/1.png" width="330" height="250"></a><a href="static/image/1.png"><img border="0" alt="W3Schools" src="static/image/4.png" width="150" height="250"></a>
+
+                                                         <a href="static/image/3.png" target="__blank"> <img border="0" alt="W3Schools" src="static/image/3.png" width="350" height="80"></a>
+</pre>
 </body>
-
 </html>
