--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -12,8 +12,8 @@
     <a href="index.html" class="w3-bar-item w3-button"><b></b> S P L I T W I S E </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="http://127.0.0.1:5000/login" class="w3-bar-item w3-button">LOGIN</a>
-      <a href="http://127.0.0.1:5000/register" class="w3-bar-item w3-button">SIGNUP</a>
+      <a href="https://app.octagon58.hasura-app.io/login_form" class="w3-bar-item w3-button">LOGIN</a>
+      <a href="https://app.octagon58.hasura-app.io/register" class="w3-bar-item w3-button">SIGNUP</a>
 
     </div>
   </div>
@@ -25,9 +25,9 @@
 
 
                     <img src="static/image/capture.png" width="1000" height="130" alt="no image">
-                                               <a href="static/image/1.png" target="__blank"> <img border="0" alt="W3Schools" src="static/image/1.png" width="330" height="250"></a><a href="static/image/1.png"><img border="0" alt="W3Schools" src="static/image/4.png" width="150" height="250"></a>
+                                               <a href="static/image/1.png" target="__blank"> <img border="0" alt="No IMAGE" src="static/image/1.png" width="330" height="250"></a><a href="static/image/1.png"><img border="0" alt="No IMage" src="static/image/4.png" width="150" height="250"></a>
 
-                                                         <a href="static/image/3.png" target="__blank"> <img border="0" alt="W3Schools" src="static/image/3.png" width="350" height="80"></a>
+                                                         <a href="static/image/3.png" > <img border="0" alt="No Image" src="https://app.octagon58.hasura-app.io/register" width="350" height="80"></a>
 </pre>
 </body>
 </html>
