--- a/microservices/app/src/templates/login.html
+++ b/microservices/app/src/templates/login.html
@@ -56,11 +56,11 @@ display: table-cell;
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-green w3-wide w3-padding w3-card">
-    <a href="index.html" class="w3-bar-item w3-button" ><b></b> S P L I T W I S E </a>
+    <a href="https://app.octagon58.hasura-app.io" class="w3-bar-item w3-button" ><b></b> S P L I T W I S E </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="http://127.0.0.1:5000/login_form" class="w3-bar-item w3-button" target="button">LOGIN</a>
-      <a href="http://127.0.0.1:5000/register" class="w3-bar-item w3-button" target="button">SIGNUP</a>
+      <a href="https://app.octagon58.hasura-app.io/login_form" class="w3-bar-item w3-button" target="button">LOGIN</a>
+      <a href="https://app.octagon58.hasura-app.io/register" class="w3-bar-item w3-button" target="button">SIGNUP</a>
 
     </div>
   </div>
@@ -70,7 +70,7 @@ display: table-cell;
 
   <div id="login-page" class="row">
     <div class="col s12 z-depth-6 card-panel">
-      <form class="login-form" action="http://127.0.0.1:5000/login_submit" method="POST">
+      <form class="login-form" action="https://app.octagon58.hasura-app.io/login_submit" method="POST">
         <div class="row">
           <div class="input-field col s12 center">
 
@@ -103,7 +103,7 @@ display: table-cell;
                  <input type="submit" value="Login">
         <div class="row">
           <div class="input-field col s6 m6 l6">
-            <p class="margin medium-small"><a href="register_frame.html">Register Now!</a></p>
+            <p class="margin medium-small"><a href="https://app.octagon58.hasura-app.io/register.html">Register Now!</a></p>
           </div>
           <div class="input-field col s6 m6 l6">
               <p class="margin right-align medium-small"><a href="#">Forgot password?</a></p>
