--- a/microservices/app/src/templates/register.html
+++ b/microservices/app/src/templates/register.html
@@ -60,8 +60,8 @@ display: table-cell;
     <a href="index.html" class="w3-bar-item w3-button" ><b></b> S P L I T W I S E </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="http://127.0.0.1:5000/login" class="w3-bar-item w3-button" target="button">LOGIN</a>
-      <a href="http://127.0.0.1:5000/register" class="w3-bar-item w3-button" target="button">SIGNUP</a>
+      <a href="https://app.octagon58.hasura-app.io/login_form" class="w3-bar-item w3-button" target="button">LOGIN</a>
+      <a href="https://app.octagon58.hasura-app.io/register" class="w3-bar-item w3-button" target="button">SIGNUP</a>
 
     </div>
   </div>
@@ -70,7 +70,7 @@ display: table-cell;
 <div class="in2">
   <div class="in2"id="login-page" class="row">
     <div class="col s12 z-depth-6 card-panel">
-      <form class="login-form" action="http://127.0.0.1:5000/signup_submit" method="POST">
+      <form class="login-form" action="https://app.octagon58.hasura-app.io/signup_submit" method="POST">
         <div class="row">
           <div class="input-field col s12 center">
 
@@ -118,7 +118,7 @@ display: table-cell;
           <input type="submit" Value="Register" class="btn waves-effect waves-light col s12"></a>
           </div>-->
           <div class="input-field col s12">
-            <p class="margin center medium-small sign-up">Already have an account? <a href="login.html">Login</a></p>
+            <p class="margin center medium-small sign-up">Already have an account? <a href="https://app.octagon58.hasura-app.io/login_form.html">Login</a></p>
           </div>
         </div>
       </form>
