--- a/microservices/app/src/templates/login.html
+++ b/microservices/app/src/templates/login.html
@@ -56,11 +56,11 @@ display: table-cell;
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-green w3-wide w3-padding w3-card">
-    <a href="https://app.octagon58.hasura-app.io" class="w3-bar-item w3-button" ><b></b> S P L I T W I S E </a>
+    <a href="https://app.octagon58.hasura-app.io/" class="w3-bar-item w3-button" ><b></b> S P L I T W I S E </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
-      <a href="https://app.octagon58.hasura-app.io/login_form" class="w3-bar-item w3-button" target="button">LOGIN</a>
-      <a href="https://app.octagon58.hasura-app.io/register" class="w3-bar-item w3-button" target="button">SIGNUP</a>
+      <a href="https://app.octagon58.hasura-app.io/login_form" class="w3-bar-item w3-button" >LOGIN</a>
+      <a href="https://app.octagon58.hasura-app.io/register" class="w3-bar-item w3-button" >SIGNUP</a>
 
     </div>
   </div>
