--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -24,10 +24,10 @@
 
 
 
-                    <img src="static/image/capture.png" width="1000" height="130" alt="no image">
+                    <img src="static/image/Capture.png" width="1000" height="130" alt="no image">
                                                <a href="static/image/1.png" target="__blank"> <img border="0" alt="No IMAGE" src="static/image/1.png" width="330" height="250"></a><a href="static/image/2.png" target="_blank_"><img border="0" alt="No IMage" src="static/image/2.png" width="150" height="250"></a>
 
-                                                         <a href="static/image/3.png" > <img border="0" alt="No Image" src="https://app.octagon58.hasura-app.io/register" width="350" height="80"></a>
+                                                         <a href="https://app.octagon58.hasura-app.io/register" > <img border="0" alt="No Image" src="static/image/3.png" width="350" height="80"></a>
 </pre>
 </body>
 </html>
