--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -9,7 +9,7 @@
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-green w3-wide w3-padding w3-card">
-    <a href="index.html" class="w3-bar-item w3-button"><b></b> S P L I T W I S E </a>
+    <a href="https://app.octagon58.hasura-app.io/login_form/index" class="w3-bar-item w3-button"><b></b> S P L I T W I S E </a>
     <!-- Float links to the right. Hide them on small screens -->
     <div class="w3-right w3-hide-small">
       <a href="https://app.octagon58.hasura-app.io/login_form" class="w3-bar-item w3-button">LOGIN</a>
