--- a/microservices/app/src/templates/login.html
+++ b/microservices/app/src/templates/login.html
@@ -79,6 +79,9 @@ display: table-cell;
           {%with messages = get_flashed_messages() %}
           {% if messages%}
           {{messages}}
+          {% endfor %}
+   {% endif %}
+{% endwith %}
         </div>
         <div class="row margin">
           <div class="input-field col s12">
