--- a/microservices/app/src/templates/login.html
+++ b/microservices/app/src/templates/login.html
@@ -109,7 +109,7 @@ display: table-cell;
                  <input type="submit" value="Login">
         <div class="row">
           <div class="input-field col s6 m6 l6">
-            <p class="margin medium-small"><a href="https://app.octagon58.hasura-app.io/register.html">Register Now!</a></p>
+            <p class="margin medium-small"><a href="https://app.octagon58.hasura-app.io/register">Register Now!</a></p>
           </div>
           <div class="input-field col s6 m6 l6">
               <p class="margin right-align medium-small"><a href="#">Forgot password?</a></p>
