--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -14,7 +14,7 @@ div {
 </head>
 <body>
 <div>
-    <pre>                                                                                     {{username}} <font color="blue" ><a href="#">Logout</a></font> </pre>
+    <pre>                                                                                     {{username}} <font color="blue" ><a href="https://app.octagon58.hasura-app.io/logout_user?auth_token='{{auth_token}}' ">Logout</a></font> </pre>
 
 
 </div>
