--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -5,7 +5,11 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <body>
-
+ {%with messages = get_flashed_messages() %}
+          {% for message in messages %}
+             <strong> alert({{message}}) </strong>
+               {% endfor %}
+          {% endwith %}
 <!-- Navbar (sit on top) -->
 <div class="w3-top">
   <div class="w3-bar w3-green w3-wide w3-padding w3-card">
