--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -14,7 +14,7 @@ div {
 </head>
 <body>
 <div>
-    <pre>                                                                                   {{hasura_id}}  {{username}} <font color="blue" ><a href="https://app.octagon58.hasura-app.io/logout_user?hasura_id='{{hasura_id}}' ">Logout</a></font> </pre>
+    <pre>                                                                                   {{hasura_id}}  {{username}} <font color="blue" ><a href="https://app.octagon58.hasura-app.io/logout_user?hasura_id={{hasura_id}} ">Logout</a></font> </pre>
 
 
 </div>
