--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -65,7 +65,7 @@ img {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{usrname}}<img src="static/image/img_avatar.png" style="width:200px"/>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{username}}<img src="static/image/img_avatar.png" style="width:200px"/>
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Page 1-1</a></li>
