--- a/microservices/app/src/templates/index.html
+++ b/microservices/app/src/templates/index.html
@@ -34,7 +34,7 @@
           {% for message in messages %}
 
              <script type="text/javascript">
-        alert("{{message}}");
+        alert("{{message+error}}");
             </script>
                {% endfor %}
           {% endwith %}
