--- a/microservices/app/src/templates/register.html
+++ b/microservices/app/src/templates/register.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=0, maximum-scale=1.0, user-scalable=no">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-  <title>Signup / Registration form using Material Design - Demo by W3lessons</title>
+  <title>Signup </title>
   <!-- CORE CSS-->
 
   </head>
@@ -126,7 +126,7 @@ display: table-cell;
           <input type="submit" Value="Register" class="btn waves-effect waves-light col s12"></a>
           </div>-->
           <div class="input-field col s12">
-            <p class="margin center medium-small sign-up">Already have an account? <a href="https://app.octagon58.hasura-app.io/login_form.html">Login</a></p>
+            <p class="margin center medium-small sign-up">Already have an account? <a href="https://app.octagon58.hasura-app.io/login_form">Login</a></p>
           </div>
         </div>
       </form>
