--- a/microservices/app/src/templates/login.html
+++ b/microservices/app/src/templates/login.html
@@ -111,7 +111,7 @@ display: table-cell;
             <p class="margin medium-small"><a href="https://app.octagon58.hasura-app.io/register">Register Now!</a></p>
           </div>
           <div class="input-field col s6 m6 l6">
-              <p class="margin right-align medium-small"><a href="#">Forgot password?</a></p>
+              <p class="margin right-align medium-small"><a href="https://app.octagon58.hasura-app.io/forgot_password">Forgot password?</a></p>
           </div>
         </div>
         <!--<div class="row">
