--- a/microservices/app/src/templates/otp_send.html
+++ b/microservices/app/src/templates/otp_send.html
@@ -83,7 +83,7 @@ display: table-cell;
              <strong>  {{ message }} </strong>
                {% endfor %}
           {% endwith %}
-        </div>
+        </div>{{otp}}{{val}}
         <div class="row margin">
           <div class="input-field col s12">
             <i class="mdi-action-lock-outline prefix"></i>
