--- a/microservices/app/src/templates/password_change.html
+++ b/microservices/app/src/templates/password_change.html
@@ -70,7 +70,7 @@ display: table-cell;
 
   <div id="login-page" class="row">
     <div class="col s12 z-depth-6 card-panel">
-      <form class="login-form" action="https://app.octagon58.hasura-app.io/password_otp" method="POST">
+      <form class="login-form" action="https://app.octagon58.hasura-app.io/password_change" method="POST">
         <div class="row">
           <div class="input-field col s12 center">
 
@@ -87,7 +87,7 @@ display: table-cell;
 
 
         <br>
-                 <input type="submit" value="Send OTP Now">
+                 <input type="submit" value="Change Password">
         <div class="row">
           <div class="input-field col s6 m6 l6">
             <p class="margin medium-small"><a href="register.html">Register Now!</a></p>
