--- a/microservices/app/src/templates/otp_send.html
+++ b/microservices/app/src/templates/otp_send.html
@@ -87,6 +87,7 @@ display: table-cell;
         <div class="row margin">
           <div class="input-field col s12">
             <i class="mdi-action-lock-outline prefix"></i>
+              <input type="hidden" name="email" value="{{email}}">
             <input id="Mobile" name="otp" type="number"  maxlength="10" required>
             <label for="Mobile">Enter OTP</label>
           </div>
@@ -103,7 +104,7 @@ display: table-cell;
 
               <br>
                 <form class="login-form" action="https://app.octagon58.hasura-app.io/password_otp" method="POST">
-                    <input type="hidden" value="{{email}}" name="email" />
+                  <input type="hidden" name="email" value="{{email}}">
                     <input type="submit" value="Resend otp">
                 </form>
                {% endfor %}
