--- a/microservices/app/src/templates/forgot_password.html
+++ b/microservices/app/src/templates/forgot_password.html
@@ -77,6 +77,11 @@ display: table-cell;
             <p class="center login-form-text"> <pre>        PASSWORD RECOVERY        </pre></p>
           </div>
 
+          {%with messages = get_flashed_messages() %}
+          {% for message in messages %}
+             <strong>  {{ message }} </strong>
+               {% endfor %}
+          {% endwith %}
         </div>
         <div class="row margin">
           <div class="input-field col s12">
@@ -90,10 +95,10 @@ display: table-cell;
                  <input type="submit" value="Send OTP Now">
         <div class="row">
           <div class="input-field col s6 m6 l6">
-            <p class="margin medium-small"><a href="register.html">Register Now!</a></p>
+            <p class="margin medium-small"><a href="https://app.octagon58.hasura-app.io/register">Register Now!</a></p>
           </div>
           <div class="input-field col s6 m6 l6">
-              <p class="margin right-align medium-small"><a href="login.html">Login</a></p>
+              <p class="margin right-align medium-small"><a href="https://app.octagon58.hasura-app.io/login_form">Login</a></p>
           </div>
         </div>
 
