--- a/microservices/app/src/templates/password_change.html
+++ b/microservices/app/src/templates/password_change.html
@@ -90,10 +90,10 @@ display: table-cell;
                  <input type="submit" value="Change Password">
         <div class="row">
           <div class="input-field col s6 m6 l6">
-            <p class="margin medium-small"><a href="register.html">Register Now!</a></p>
+            <p class="margin medium-small"><a href="https://app.octagon58.hasura-app.io/register">Register Now!</a></p>
           </div>
           <div class="input-field col s6 m6 l6">
-              <p class="margin right-align medium-small"><a href="login.html">Login</a></p>
+              <p class="margin right-align medium-small"><a href="https://app.octagon58.hasura-app.io/login_form">Login</a></p>
           </div>
         </div>
 
