--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Bootstrap Example</title>
+  <title>Home page</title>
   <meta charset="utf-8">
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -32,18 +33,142 @@
       padding: 15px;
     }
 
-img {
-  border-radius: 50%;
-}
 
     /* On small screens, set height to 'auto' for sidenav and grid */
     @media screen and (max-width: 767px) {
       .sidenav {
         height: auto;
-        padding: 15px;
+        padding: 25px;
       }
       .row.content {height:auto;}
     }
+    #customers {
+    font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+
+#customers td, #customers th {
+    border: 1px solid #ddd;
+    padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th.a {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: center;
+    background-color: #4CAF50;
+    color: white;
+}
+#customers th{
+text-align:center;
+}
+
+#customers th.a1 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    text-align: center;
+    background-color:#4CAF50;
+    color: white;
+}
+#customers th.a3 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    text-align: center;
+    background-color: white;
+    color: white;
+}
+
+div.a{
+    background-color: lightgrey;
+    width: 180px;
+    border: 2px solid green;
+    padding: 2px;
+    margin: 2px;
+}
+div.a1{
+    background-color: green;
+    width: 180px;
+    border: 2px solid green;
+    padding: 12px;
+    margin: 20px;
+}
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
+    background-color: #f1f1f1;
+}
+
+li a {
+    display: block;
+    color: #000;
+    padding: 8px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+
+    background-color: #fefefe;
+    margin: auto;
+    overflow: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 40%;
+}
+
+/* The Close Button */
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
   </style>
 </head>
 <body>
@@ -65,11 +190,13 @@ img {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{username}}<img src="static/image/img_avatar.png" style="width:200px"/>
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{username}}<img src="static/image/5.png" style="width:200px" />
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
-          <li><a href="#">Page 1-1</a></li>
-          <li><a href="#">Page 1-2</a></li>
+          <li><a href="#">Dashboard</a></li>
+          <li><a href="#">Update Email</a></li>
+          <li><a href="#">Update Mobile No</a></li>
+          <li><a href="#">Update password</a></li>
           <li><a href="https://app.octagon58.hasura-app.io/logout_user">Logout</a></li>
         </ul>
       </li>
@@ -81,31 +208,109 @@ img {
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-      <p><a href="#">Link</a></p>
-    </div>
+
+      <ul>
+  <li><a href="#home">Dashboard</a></li>
+  <li><a href="#news">Transactions</a></li>
+  <li><a href="#contact">Invite friend</a></li>
+
+</ul>
+      <div class="a">
+        <a href="#">+Add groups</a> <h4><u>Groups </u>   </h4>
+      </div>
+      <div class="a">
+        <button id="myBtn">+Add friends</button><h4><u>Friends</u></h4>
+
+
+<div id="myModal" class="modal">
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <h3>Select As Friend </h3>
+  <br>
+
+
+  </div>
+
+</div>
+
+
+      </div>
+     <br>   <ul>
+  <li><a href="#home">Contact</a></li>
+  <li><a href="#news">FAQ</a></li>
+  <li><a href="#contact">Supports</a></li>
+
+</ul>
+      </div>
     <div class="col-sm-8 text-left">
 
       <pre><h1>DASHBOARD</h1>                                                                       <button type="button" class="btn btn-info btn-lg"><a href="#">Add Bill</a></button>        <button type="button" class="btn btn-warning btn-lg"><a href="#">Settle Up</a></button>  </pre>
 
+    <table border="0" id="customers">
+  <tr valign="center">
+    <th class="a">Wallet Amount</th>
+    <th class="a1">Contributed amount</th>
+    <th class="a3"><a href="#" class="button">Redeem Your Wallet</a></th>
 
+  </tr>
+  <tr>
+    <th>Rs. 00</th>
+    <th>Rs. 00</th>
 
+  </tr>
+  <tr>
+  </tr></table>
+<hr>
     </div>
     <div class="col-sm-2 sidenav">
       <div class="well">
-        <p>ADS</p>
+
+        <strong><div class="a"><h4><u>RULES</u></h4><br>
+        * Users are given $100 as welcome bonus.<br>
+        * You need to add friends before you can create group.<br>
+        * Groups are immutable to prevent distortion of group history.<br>
+        * Bills are always split equally.<br>
+        * Payments are made outside the app.<br></div>
+        </strong></div><br>
+      <strong><div class="a1"><h4>Minimum Value <u>Product</u></h4>
+
+        Please use a desktop browser & decent internet connection to use this app<br></div>
+        </strong></div>
+
       </div>
-      <div class="well">
-        <p>ADS</p>
-      </div>
-    </div>
   </div>
 </div>
 
-<footer class="container-fluid text-center">
-  <p>Footer Text</p>
-</footer>
 
+
+<script>
+// Get the modal
+var modal = document.getElementById('myModal');
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal
+btn.onclick = function() {
+    modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+    modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+    if (event.target == modal) {
+        modal.style.display = "none";
+    }
+}
+</script>
 </body>
+
 </html>
