--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -231,8 +231,8 @@ li a:hover {
   <br>
     <form action="#" methods="post">
 
-    {% for i in range(0,len(select_friend)) %}
-    <input type="checkbox" name="vehicle" value="{{select_friend[i]}}"><t>{{select_friend[i]}}<br>
+    {% for i in select_friend %}
+    <input type="checkbox" name="vehicle" value="i"><t>i<br>
     {% endfor%}
     <t><input type="submit" value="Add friend"> </t>
 
