--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -232,7 +232,7 @@ li a:hover {
     <form action="#" methods="post">
 
     {% for i in select_friend %}
-    <input type="checkbox" name="vehicle" value="i"><t>i<br>
+    <input type="checkbox" name="vehicle" value="i">{{i}}<br>
     {% endfor%}
     <t><input type="submit" value="Add friend"> </t>
 
