--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -232,9 +232,9 @@ li a:hover {
     <form action="#" methods="post">
 
     {% for i in select_friend %}
-      <table>
+      <table >
 
-        <tr><td><input type="checkbox" name="vehicle" value="{{i}}"></td> <td>{{i}}</td></tr>
+        <tr valign="middle"><td><input type="checkbox" name="vehicle" value="{{i}}"></td> <td valign="center">{{i}}</td></tr>
 
         </table>
         <br>
