--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -220,7 +220,9 @@ li a:hover {
       </div>
       <div class="a">
         <button id="myBtn">+Add friends</button><h4><u>Friends</u></h4>
-
+        {% for i in friend %}
+        {{ i}}<a href="#">remove</a>
+          {% endfor %} <hr>
 
 <div id="myModal" class="modal">
   <!-- Modal content -->
