--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -221,8 +221,8 @@ li a:hover {
       <div class="a">
         <button id="myBtn">+Add friends</button><h4><u>Friends</u></h4>
         {% for i in friend %}
-        {{ i}}<a href="#">remove</a>
-          {% endfor %} <hr>
+        <pre>{{ i}}     <a href="#">remove</a></pre><hr>
+          {% endfor %}
 
 <div id="myModal" class="modal">
   <!-- Modal content -->
