--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -6,6 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
@@ -221,7 +222,7 @@ li a:hover {
       <div class="a">
         <button id="myBtn">+Add friends</button><h4><u>Friends</u></h4>
         {% for i in friend %}
-        <pre>{{i}}<a href="#">remove</a></pre>
+             <i class="glyphicon glyphicon-user"></i>{{i}}
           {% endfor %}
 
 <div id="myModal" class="modal">
