--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -191,7 +191,7 @@ li a:hover {
       </ul>
       <ul class="nav navbar-nav navbar-right">
        <li class="dropdown">
-        <a class="dropdown-toggle" data-toggle="dropdown" href="#">{{username}}<img src="static/image/5.png" style="width:200px" />
+        <a class="dropdown-toggle" data-toggle="dropdown" href="#"><i class="glyphicon glyphicon-user"></i>{{username}}
         <span class="caret"></span></a>
         <ul class="dropdown-menu">
           <li><a href="#">Dashboard</a></li>
