--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -222,7 +222,7 @@ li a:hover {
       <div class="a">
         <button id="myBtn">+Add friends</button><h4><u>Friends</u></h4>
         {% for i in friend %}
-             <i class="glyphicon glyphicon-user"></i>{{i}}
+             <i class="glyphicon glyphicon-user"></i>{{i}}<br>
           {% endfor %}
 
 <div id="myModal" class="modal">
