--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -222,7 +222,7 @@ li a:hover {
       <div class="a">
         <button id="myBtn">+Add friends</button><h4><u>Friends</u></h4>
         <table>{% for i in friend %}
-             <tr><td><i class="glyphicon glyphicon-user"></i>{{i}}</td></tr>
+             <tr valign="left"><td><i class="glyphicon glyphicon-user"></i>{{i}}</td></tr>
           {% endfor %}
         </table>
 <div id="myModal" class="modal">
