--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -220,8 +220,8 @@ li a:hover {
         <a href="#">+Add groups</a> <h4><u>Groups </u>   </h4>
       </div>
       <div class="a">
-        <button id="myBtn">+Add friends</button><h4><u>Friends</u></h4>
-        <table>{% for i in friend %}
+        <button id="myBtn">+Add friends</button><h4><u>My Friends</u></h4>
+        <table border="1">{% for i in friend %}
              <tr valign="left"><td><i class="glyphicon glyphicon-user"></i>{{i}}</td></tr>
           {% endfor %}
         </table>
