--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -221,10 +221,10 @@ li a:hover {
       </div>
       <div class="a">
         <button id="myBtn">+Add friends</button><h4><u>My Friends</u></h4>
-        <table border="1">{% for i in friend %}
-             <tr valign="left"><td><i class="glyphicon glyphicon-user"></i>{{i}}</td></tr>
+      <ul>  {% for i in friend %}
+            <li> <i class="glyphicon glyphicon-user"></i>{{i}} </li>
           {% endfor %}
-        </table>
+        </ul>
 <div id="myModal" class="modal">
   <!-- Modal content -->
   <div class="modal-content">
