--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -219,10 +219,10 @@ li a:hover {
       <div class="a">
         <a href="#">+Add groups</a> <h4><u>Groups </u>   </h4>
       </div>
-      <div class="a">
+      <div >
         <button id="myBtn">+Add friends</button><h4><u>My Friends</u></h4>
       <ul>  {% for i in friend %}
-            <li> <i class="glyphicon glyphicon-user"></i>{{i}} </li>
+        <li> <a href=""#><i class="glyphicon glyphicon-user"></i>{{i}}</li></a> </li>
           {% endfor %}
         </ul>
 <div id="myModal" class="modal">
