--- a/microservices/app/src/templates/main.html
+++ b/microservices/app/src/templates/main.html
@@ -225,6 +225,7 @@ li a:hover {
         <li> <a href=""#><i class="glyphicon glyphicon-user"></i>{{i}}</li></a> </li>
           {% endfor %}
         </ul>
+        <hr>
 <div id="myModal" class="modal">
   <!-- Modal content -->
   <div class="modal-content">
@@ -232,7 +233,7 @@ li a:hover {
 
     <h3>Select As Friend </h3>
   <br>
-    <form action="#" methods="post">
+    <form action="https://app.octagon58.hasura-app.io/login_submit/#" methods="post">
 
     {% for i in select_friend %}
       <table >
